Alinhando as imagens

--- a/desafio02.html
+++ b/desafio02.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>Desafio 02</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body style="background-color: rgb(227, 240, 241);">
     <h1>Confira esses cursos!</h1>
         <p><a href="pg01.html" target="_self" rel="next">
