--- a/pg02.html
+++ b/pg02.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>Desafio 02 pagina 02</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body style="background-color: aqua;">
     <h1>Veja o trailer!</h1>
     <h2>Curso de <abbr title="Hyper Text Markup Language">HTML</abbr> 5</h2>
@@ -16,6 +21,6 @@
     <p>Confira a playlist do <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o"
         target="_blank" rel="exter"><em>Curso Completo</em></a>!
     </p>
-    <a href="desafio02.html" target="_self" rel="prev"><img src="img desafios/voltar.png" alt="imagem"></a>
+    <a href="desafio02.html" target="_self" rel="prev"><img src="../Desafios/img/voltar.png" alt="seta para voltar"></a>
 </body>
 </html>
