--- a/pg04.html
+++ b/pg04.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>Desafio 02 pagina 04</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body style="background-color: rgba(255, 196, 0, 0.705);">
     <h1>Veja o trailer!</h1>
     <h2>Curso de Python</h2>
@@ -15,6 +20,6 @@
     allowfullscreen></iframe>
     <p>Confira a playlist do <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6"
         target="_blank" rel="external"><em>Curso Completo</em>!</a></p>
-        <a href="desafio02.html"><img src="img desafios/voltar.png" alt="imagem"></a>
+        <a href="desafio02.html"><img src="../Desafios/img/voltar.png" alt="seta para voltar"></a>
 </body>
 </html>
