--- a/pg01.html
+++ b/pg01.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>Desafio 02 pagina 01</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body style="background-color: rgba(9, 255, 152, 0.658);">
     <h1>Veja o trailer!</h1>
     <h2>Curso de Hardware</h2>
@@ -15,6 +20,6 @@
     <p>Confira a playlist do <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW"
         target="_blank" rel="external"><em>Curso Completo</em></a>!
     </p>
-    <a href="desafio02.html" target="_self" rel="prev"><img src="img desafios/voltar.png" alt="imagem"></a>
+    <a href="desafio02.html" target="_self" rel="prev"><img src="../Desafios/img/voltar.png" alt="seta para voltar"></a>
 </body>
 </html>
