--- a/pg03.html
+++ b/pg03.html
@@ -6,6 +6,11 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>Desafio 02 pagina 03</title>
 </head>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <body style="background-color: rgba(226, 223, 44, 0.671);">
     <h1>Veja o trailer!</h1>
     <h2>Curso de JavaScrpt</h2>
@@ -15,6 +20,6 @@
     allowfullscreen></iframe>
     <p>Confira a playlist do <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1"
         target="_blank" rel="external"><em>Curso Completo</em></a>!</p>
-    <a href="desafio02.html"><img src="img desafios/voltar.png" alt="image"></a>
+    <a href="desafio02.html"><img src="../Desafios/img/voltar.png" alt="seta de voltar"></a>
 </body>
 </html>
