Finalização do projeto cordel

--- a/desafio04.html
+++ b/desafio04.html
@@ -10,9 +10,11 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" 
-        rel="Milton Duarte autor do poema">Milton Duarte</a>
-    </header>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank"
+            rel="Milton Duarte autor do poema">Milton Duarte</a>
+                </header>
+        </p>
     <main>
         <section id="v1">
             <p class="versos">
@@ -92,5 +94,8 @@
             </p>
         </section>
     </main>
+    <footer>
+        <p>Projeto cordel moderno por Pedro Henrique&copy;</p>
+    </footer>
 </body>
 </html>
