--- a/desafio05tabelas.html
+++ b/desafio05tabelas.html
@@ -80,12 +80,12 @@
     </table>
     <table>
         <tr>
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
+            <th scope="col">Grupo</th>
+            <th scope="col">Nomes</th>
+            <th colspan="3" scope="colgroup">Filmes</th>
         </tr>
         <tr>
-            <th rowspan="3">Homens</th>
+            <th rowspan="3" scope="rowgroup">Homens</th>
             <td>Bruno Mendonça</td>
             <td> Intocáveis</td>
             <td>Amnésia</td>
@@ -104,7 +104,7 @@
             <td>Toy Story</td>
         </tr>
         <tr>
-            <th rowspan="3">Mulheres</th>
+            <th rowspan="3" scope="rowgroup">Mulheres</th>
             <td>Ana Maria Santos</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -123,5 +123,10 @@
             <td>Big Hero</td>
         </tr>
     </table>
+        <p>Temos dois outros scope além <em>col</em> e <em>row</em>, que são o <em>colgroup</em> e 
+        <h2>Escopos de grupo</h2>
+        <em>rowgroup</em>, como exemplo o "Homens" e "Mulheres" que o scope deve ser o <em>rowgroup</em> 
+        pois se for só o row ele incluira a primeira linha mas como são 3 linhas elas são um grupo. No 
+        mesmo raciocinio é os "Filmes" pois são 3 colunas e por isso o scope é <em>colgroup</em>.</p>
 </body>
 </html>
