--- a/desafio05tabelas.html
+++ b/desafio05tabelas.html
@@ -128,5 +128,71 @@
         <em>rowgroup</em>, como exemplo o "Homens" e "Mulheres" que o scope deve ser o <em>rowgroup</em> 
         pois se for só o row ele incluira a primeira linha mas como são 3 linhas elas são um grupo. No 
         mesmo raciocinio é os "Filmes" pois são 3 colunas e por isso o scope é <em>colgroup</em>.</p>
+        <table>
+            <tr>
+                <th rowspan="2" colspan="2">Área</th>
+                <th rowspan="2" colspan="2">Disciplinas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
+                <th rowspan="2">Média</th>
+            </tr>
+            <tr><th>Nota 1</th>
+                <th>Nota 2</th></tr>
+            <tr>
+                <th rowspan="5" colspan="2" scope="rowgroup">Exatas</th>
+            </tr>
+            <tr>
+                <th colspan="2">Matemática</th>
+                <td>8</td>
+                <td>8.5</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <th colspan="2">Física</th>
+                <td>6</td>
+                <td>7.5</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <th colspan="2">Química</th>
+                <td>6.5</td>
+                <td>7</td>
+                <td>6.7</td>
+            </tr>
+            <tr>
+                <th colspan="2">Biologia</th>
+                <td>8</td>
+                <td>8</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <th colspan="6">Média de exatas</th>
+                <td>7.5</td>
+            </tr>
+            <tr>
+                <th rowspan="4" scope="rowgroup">Humanas</th>
+            </tr>
+            <tr>
+                <th colspan="3">Hístoria</th>
+                <td>9</td>
+                <td>8.5</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <th colspan="3">Geografia</th>
+                <td>8.5</td>
+                <td>9</td>
+                <td>8.4</td>
+            </tr>
+            <tr>
+                <th colspan="3">Portugues</th>
+                <td>10</td>
+                <td>10</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <th colspan="6">Média de humanas</th>
+                <td>9.5</td>
+            </tr>
+        </table>
 </body>
 </html>
