--- a/desafio05tabelas.html
+++ b/desafio05tabelas.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-    <h1>Desafio de replicar as duas tabelas mostradas na aula</h1>
+    <h1>Desafio de replicar as tabelas mostradas na aula</h1>
     <table>
         <tr>
             <td>1</td>
