--- a/desafio06.html
+++ b/desafio06.html
@@ -8,13 +8,24 @@
     <title>Projeto</title>
 </head>
 <body>
-    <a href="social/home.png" target="tela"><img src="social/logo-home.png" alt="botão menu"></a>
-    <a href="social/facebook.png" target="tela"><img src="social/face.png" alt="botão facebook"></a>
-    <a href="social/instagram.png" target="tela"><img src="social/inta.png" alt="botão instagram"></a>
-    <a href="social/githubp.png" target="tela"><img src="social/logo-github.png" alt="botão Git Hub"></a>
-    <a href="social/youtube.png" target="tela"><img src="social/logo-youtube.png" alt="botão youtube"></a>
-    <div>
-        <iframe src="social/home.png" name="tela" frameborder="0"></iframe>
-    </div>
+    <main>
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="social/logo-home.jpg" alt="botão menu"></a>
+            <br>
+            <a href="face.html" target="tela"><img src="social/face.png" alt="botão facebook"></a>
+            <br>
+            <a href="insta.html" target="tela"><img src="social/inta.png" alt="botão instagram"></a>
+            <br>
+            <a href="github.html" target="tela"><img src="social/logo-github.jpg" alt="botão Git Hub"></a>
+            <br>
+            <a href="youtube.html" target="tela"><img src="social/logo-youtube.jpg" alt="botão youtube"></a>
+            
+        <section id="telefone">
+            <iframe src="home.html" name="tela" frameborder="0">
+                [Infelizmente, o seu navegador não é compatível com isso.]
+            </iframe>
+        </section>
+        </section>
+</main>
 </body>
 </html>
