finalização do desafio 6

--- a/face.html
+++ b/face.html
@@ -6,17 +6,37 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>face</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body{
-            background-color: black;
-            background-image: url(social/facebook.png);
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: top center;
-            background-attachment: fixed;
+            background-color: rgb(26, 73, 228);
+        }
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
+        }
+        img{
+            width: 100%;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            background-color: rgb(26, 73, 228);
+            display: block;
+            margin-top: -4px;
+            text-align: center;
+            font-size: 2em;
+        }
+        a:hover{
+            background-color: rgb(7, 41, 153);
         }
     </style>
 </head>
 <body>
-    
+    <img src="social/facebook.png" alt="facebook do pedro">
+    <a href="https://www.facebook.com/profile.php?id=100009213708779&locale=pt_BR" target="_blank"
+    rel="external">Acessar Facebook</a>
 </body>
 </html>
