--- a/github.html
+++ b/github.html
@@ -6,13 +6,36 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>github</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body{
-            background: black url(social/githubp.png) top center no-repeat fixed;
-            background-size: cover;
+            background-color: rgb(7, 119, 26);
+        }
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
+        img{
+            width: 100%;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            background-color: rgb(7, 119, 26);
+            display: block;
+            margin-top: -4px;
+            text-align: center;
+            font-size: 2em;
+        }
+        a:hover{
+            background-color: rgb(1, 78, 1);
         }
     </style>
 </head>
 <body>
-    
+    <img src="social/githubp.png" alt="Perfil do Pedro">
+    <a href="https://github.com/PedroHFE" target="_blank" rel="external">Acessar GitHub</a>
 </body>
 </html>
