--- a/youtube.html
+++ b/youtube.html
@@ -6,13 +6,36 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>youtube</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body{
-            background: black url(social/youtube.png) top center no-repeat fixed;
-            background-attachment: cover;
+            background-color: rgb(250, 6, 6);
+        }
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
+        img{
+            width: 100%;;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            background-color: rgb(250, 6, 6);
+            display: block;
+            margin-top: -4px;
+            text-align: center;
+            font-size: 2em;
+        }
+        a:hover{
+            background-color: darkred;
         }
     </style>
 </head>
 <body>
-    
+    <img src="social/youtube.png" alt="Playlist do curno no youtube">
+    <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">Acessar YouTube</a>
 </body>
 </html>
