--- a/insta.html
+++ b/insta.html
@@ -6,13 +6,36 @@
     <link rel="shortcut icon" href="../favicon_io/favicon-16x16.png" type="image/x-icon">
     <title>insta</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body{
-            background: black url(social/instagram.png) top center no-repeat fixed;
-            background-size: cover;
+            background-color: transparent;
+        }
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
+        }
+        img{
+            width: 100%;
+        }
+        a{
+            text-decoration: none;
+            color: white;
+            background-image: linear-gradient(150deg, #432edb 8%, #fc1a7c 44%, #fec053);
+            display: block;
+            margin-top: -4px;
+            text-align: center;
+            font-size: 2em;
+        }
+        a:hover{
+            background-image: linear-gradient(150deg, #1d05d4 8%, #a3084b 44%, #db8d05);
         }
     </style>
 </head>
 <body>
-    
+    <img src="social/instagram.png" alt="instagram do pedro">
+    <a href="https://www.instagram.com/pedrox_hf/" target="_blank" rel="external">Acessar Instagram</a>
 </body>
 </html>
