finalização do projeto login

--- a/login/index.html
+++ b/login/index.html
@@ -19,9 +19,9 @@
                 <h1>Login</h1>
                 <P> Seja bem-vindo(a). Faça login ou cadastre-se para fazer às configurações no seu ambiente.</P>
                 <label for="imail"><span class="material-symbols-outlined">
-                    person</span><input type="email" name="mail" id="imail" required ></label>
+                    person</span><input type="email" name="mail" id="imail" required placeholder=" Seu email aqui"></label>
                 <label for="isenha"><span class="material-symbols-outlined">
-                    key</span><input type="password" name="senha" id="isenha" required minlength="8" maxlength="15"></label>
+                    key</span><input type="password" name="senha" id="isenha" required minlength="8" maxlength="15" placeholder=" Sua senha aqui"></label>
                 <input type="submit" value="Entrar" id="enter">
                 <input type="submit" value="Esqueci minha senha" id="ems">
             </form>
